--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/smonitoring
+spring.datasource.url=jdbc:postgresql://db:5432/smonitoring
 spring.datasource.username=postgres
 spring.datasource.password=123456
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.freemarker.expose-request-attributes=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-server.port=8080
+
+
 spring.mvc.hiddenmethod.filter.enabled=true
-
-
 
 management.endpoints.web.exposure.include=prometheus
 management.endpoint.metrics.enabled=true
