--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,24 @@ services:
         - SPRING_JPA_HIBERNATE_DDL_AUTO=update
       depends_on:
         - db
+
   grafana:
-      image: grafana/grafana-enterprise
+      image: grafana/grafana
       container_name: grafana_api-tester
       restart: unless-stopped
+      volumes:
+          - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
       ports:
-        - "33000:33000"
+        - "80:3000"
       depends_on:
         - db
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - db
